update the position of the content and box properties

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
       <h1 class="employee">Employee Registration Form</h1>
         <br><br>
-        <div class="mainBody">
         <form>
+        <div class="mainBody">
+        
          <label for="fname">First Name:</label>
         <input type="text" name="fname" id="fname" placeholder="Firstname" class="blanks">
         <br><br>
@@ -33,19 +34,17 @@
         <br><br>
 
         <label>Gender:</label>
-        <br>
+        <br> <br>
         <input type="radio" name="gnder" id="mgndr">
         <label for="mgndr">Male</label>
-        <br>
         <input type="radio" name="gnder" id="fgndr">
         <label for="fgndr">Female</label>
-        <br>
         <input type="radio" name="gnder" id="ogndr">
         <label for="ogndr">Others</label>
         <br><br>
 
         <label for="phnumber">Phone:</label>
-        <input type="text" name="countrycode" id="ccode" value="+91" size="1" class="blanks">
+        <!-- <input type="text" name="countrycode" id="ccode" value="+91" size="1" class="blanks"> -->
         <input type="tel" name="phnumbr" id="phnumber" placeholder="1234-567890" class="blanks">
         <br><br>
 
@@ -65,7 +64,8 @@
         <input type="password" name="rpswrd" id="rpswrd" placeholder="Retype Password" class="blanks">
         <br><br>
         <input type="submit"  class="register">
-    </form>
+
 </div>
+</form>
 </body>
 </html>
